# qcam

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  config.h.in  configure  configure.in
trunk/builders/: version
trunk/builders/cmake/: CMakeLists.txt  find_int_event  icontrol.sh  keepalive  makem3u8  mkdir.sh  nvram_test.temp  nvram_test.xml  nvram_test.xml.old  qicstreamer.sh  run.sh  test.sh  x64_cmake.sh
trunk/builders/cmake/applications/: CMakeLists.txt
trunk/builders/cmake/applications/appselector/: CMakeLists.txt
trunk/builders/cmake/applications/factorytest/: CMakeLists.txt
trunk/builders/cmake/applications/icontrol/: CMakeLists.txt  users.lua
trunk/builders/cmake/applications/productiontest/: CMakeLists.txt  production.lua
trunk/builders/cmake/applications/qcamunittest/: CMakeLists.txt  qcam.crt  qcam.key
trunk/builders/cmake/applications/qicstreamer/: CMakeLists.txt
trunk/builders/cmake/classify/: fids_100_41_128_64_fix.yml  fids_120_51_128_64_fix.yml  fids_141_58_176_88_fix.yml  fids_168_69_176_88_fix.yml  hs_100_41_128_64_fix.yml  hs_120_51_128_64_fix.yml  hs_141_58_176_88_fix.yml  hs_168_69_176_88_fix.yml  thrs_100_41_128_64_fix.yml  thrs_120_51_128_64_fix.yml  thrs_141_58_176_88_fix.yml  thrs_168_69_176_88_fix.yml
trunk/builders/cmake/cmake_find_modules/: Find_lua.cmake
trunk/builders/cmake/common/: CMakeLists.txt
trunk/builders/cmake/crtmpserver/: streamer.lua
trunk/builders/cmake/hardware/: CMakeLists.txt
trunk/builders/cmake/lua/: CMakeLists.txt
trunk/builders/cmake/qcam/: CMakeLists.txt  default.lua  factorytest.lua  icontrol.lua  streamer.lua  unittest.lua
trunk/builders/cmake/scripts/system/: chkstorage.sh  listdir.sh
trunk/builders/cmake/tests/: CMakeLists.txt
trunk/builders/cmake/thelib/: CMakeLists.txt
trunk/builders/cmake/watchdog/: CMakeLists.txt
trunk/docs/uml/: icamera.asta
trunk/sources/applications/applestreamingclient/src/: clientcontext.cpp
trunk/sources/applications/appselector/include/: appselectorapplication.h
trunk/sources/applications/appselector/src/: appselectorapplication.cpp
trunk/sources/applications/flvplayback/include/: flvplaybackapplication.h  testcliappprotocolhandler.h
trunk/sources/applications/flvplayback/src/: flvplaybackapplication.cpp  testcliappprotocolhandler.cpp
trunk/sources/applications/qicstreamer/include/: airservicetimer.h  baseservicetimer.h  clidefine.h  qicstreamer.h  qicstreamerapplication.h  regservicetimer.h  servicetimer.h  websocketcmdhandler.h
trunk/sources/applications/qicstreamer/src/: airservicetimer.cpp  baseservicetimer.cpp  qicstreamer.cpp  qicstreamerapplication.cpp  regservicetimer.cpp  servicetimer.cpp  websocketcmdhandler.cpp
trunk/sources/applications/samplefactory/src/: echoprotocol.cpp
trunk/sources/common/include/: common.h  defines.h  version.h  version.h.in
trunk/sources/common/include/platform/: baseplatform.h
trunk/sources/hardware/include/: avbuffermanager.h  basecpudevice.h  basehardwareabstractdevice.h  basememorydevice.h  hardwaremanager.h  hardwaretypes.h  outjpgfilestream.h  pushmediator.h
trunk/sources/hardware/include/audio/: aacstream.h  baseaudiocapturedevice.h  baseaudiodevice.h  baseaudioplaystream.h  g711stream.h  mp3stream.h  pcmplaystream.h  pcmstream.h
trunk/sources/hardware/include/gpio/: basegpiodevice.h  gpiotable.h  ledevent.h
trunk/sources/hardware/include/interface/: deviceinterface.h
trunk/sources/hardware/include/mux/: alarmmp4muxoutstream.h  avmuxstream.h  basemp4muxoutstream.h  basemuxstream.h  basetsmuxoutstream.h  cvrmuxoutstream.h  manualmp4muxoutstream.h  relaymuxstream.h
trunk/sources/hardware/include/network/: networkmanager.h
trunk/sources/hardware/include/nvram/: basenvramdevice.h
trunk/sources/hardware/include/qic/: H264Enum.h  demux.h  mdparse.h  qic32avcstream.h  qic32avcvideocapture.h  qic32avcvideocapture2.h  qic_cfg.h  qic_control.h  qic_firmware.h  qic_xuctrl.h  qicavcstream.h  qicavcvideocapture.h  qicfeatures.h  qicmjpgstream.h  qicmjpgvideocapture.h  qicmotioncapture.h  qicmotioncapture2.h  qicmotionstream.h  uvcvideo.h  videocapturecapability.h  videocapturefilterscapability.h  vp8demux.h
trunk/sources/hardware/include/storage/: basestoragedevice.h  nfsstoragedevice.h
trunk/sources/hardware/include/system/: systeminfo.h  systemmanager.h
trunk/sources/hardware/include/video/: baseavcvideocapture.h  basemjpgvideocapture.h  basev4l2videocapture.h  basevideostream.h  devicevideostream.h  videodefine.h
trunk/sources/hardware/src/: avbuffermanager.cpp  basecpudevice.cpp  basehardwareabstractdevice.cpp  basememorydevice.cpp  hardwaremanager.cpp  outjpgfilestream.cpp  pushmediator.cpp
trunk/sources/hardware/src/audio/: aacstream.cpp  baseaudiocapturedevice.cpp  baseaudiodevice.cpp  baseaudioplaystream.cpp  g711stream.cpp  mp3stream.cpp  pcmplaystream.cpp  pcmstream.cpp
trunk/sources/hardware/src/gpio/: basegpiodevice.cpp
trunk/sources/hardware/src/mux/: alarmmp4muxoutstream.cpp  avmuxstream.cpp  basemp4muxoutstream.cpp  basemuxstream.cpp  basetsmuxoutstream.cpp  cvrmuxoutstream.cpp  manualmp4muxoutstream.cpp  relaymuxstream.cpp
trunk/sources/hardware/src/network/: networkmanager.cpp
trunk/sources/hardware/src/nvram/: basenvramdevice.cpp
trunk/sources/hardware/src/qic/: H264Enum.c  demux.c  mdparse.c  qic32avcstream.cpp  qic32avcvideocapture.cpp  qic32avcvideocapture2.cpp  qic_control.c  qic_xuctrl.c  qicavcstream.cpp  qicavcvideocapture.cpp  qicmjpgstream.cpp  qicmjpgvideocapture.cpp  qicmotioncapture.cpp  qicmotioncapture2.cpp  qicmotionstream.cpp  videocapturecapability.cpp  videocapturefilterscapability.cpp  vp8demux.c
trunk/sources/hardware/src/storage/: basestoragedevice.cpp  nfsstoragedevice.cpp
trunk/sources/hardware/src/system/: systeminfo.cpp  systemmanager.cpp
trunk/sources/miscdaemon/include/: miscstatus.h
trunk/sources/miscdaemon/src/: miscdaemon.cpp  miscstatus.cpp
trunk/sources/qcam/src/: qcam.cpp
trunk/sources/watchdog/include/: watchdog.h
trunk/sources/watchdog/src/: watchdog.cpp
(+538 files in other folders)
