#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT(openqcam, 1.0.0, )
AM_INIT_AUTOMAKE([foreign subdir-objects])
AC_CONFIG_SRCDIR([trunk/sources/qcam/src/qcam.cpp])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_AWK
AC_PROG_CXX
AC_PROG_CC
AC_PROG_CPP
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB([c], [printf])
AC_CHECK_LIB([dl], [dlopen])
AC_CHECK_LIB([lua], [lua_newstate])
AC_CHECK_LIB([m], [round])
AC_CHECK_LIB([openssl], [BIO_new])
AC_CHECK_LIB([pthread], [pthread_create])
AC_CHECK_LIB([qic_sky_module], [qic_start_capture])
AC_CHECK_LIB([rt], [sem_init])

# Checks for header files.
AC_CHECK_HEADERS([arpa/inet.h fcntl.h float.h inttypes.h limits.h locale.h malloc.h netdb.h netinet/in.h stddef.h stdint.h stdlib.h string.h sys/ioctl.h sys/param.h sys/socket.h sys/statfs.h sys/statvfs.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_HEADER_STDBOOL
AC_C_INLINE
AC_TYPE_INT16_T
AC_TYPE_INT32_T
AC_TYPE_INT64_T
AC_TYPE_INT8_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T
AC_TYPE_UID_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT64_T
AC_TYPE_UINT8_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_FUNC_MKTIME
AC_FUNC_MMAP
AC_FUNC_REALLOC
AC_FUNC_STRCOLL
AC_FUNC_STRTOD
AC_CHECK_FUNCS([clock_gettime dup2 floor gethostbyname getpagesize gettimeofday inet_ntoa memchr memmove memset mkfifo modf munmap pow putenv realpath select setlocale socket sqrt strcasecmp strchr strdup strerror strncasecmp strpbrk strrchr strspn strstr strtol strtoul sysinfo tzset])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
